Fixing z-index bug with List select and edit form on profile page

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -249,5 +249,5 @@ $profile_page_fs_relationship: $profile_page_fs_small;
 }
 
 .select2-container {
-  z-index: 1060;
+  z-index: 1000;
 }
